Correct cover on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -383,7 +383,7 @@ footer .theme-by {
   height: 200px;
   width: 133px;
   margin-right: 20px;
-  margin-bottom:20px;
+  margin-bottom:60px;
 }
 
 
@@ -442,15 +442,15 @@ footer .theme-by {
 
 @media only screen and (max-width: 500px) {
   .post-image, .post-image img {
-    height: 100px;
-    width: 100px;
+    height: 200px;
+    width: 133px;
   }
 
   .post-image {
     width: 100%;
     text-align: center;
     margin-top: 0;
-    float: left;
+    margin-bottom:10px;
   }
 }
 /* --- Post and page headers --- */
